    of an interface (e.g., "show tc eth0").

2)  COMMENT lines are now allowed in /etc/shorewall/tcpri.

3)  Additional optimization is enabled when OPTIMIZE=2 or
    OPTIMIZE=3. Chains that contain nothing but rules with ACCEPT
    targets or that contain a single jump are now optimized away.

4)  The '4' bit in the OPTIMIZE option now enables additional
    optimizations:

    a) Empty Chains are optimized away.
    b) Trampoline chains (those that do nothing but jump to another
       chain) are optimized away.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 5
----------------------------------------------------------------------------

1)  The shorewall.conf options WIDE_TC_MARKS and HIGH_ROUTE_MARKS are
    now deprecated in favor of a new set of options that define the layout
    of the 32-bit packet/connection mark.

        TC_BITS           Number of bits at the least-significant end
       			  of the mark used for traffic shaping. Marks
       			  used for traffic shaping must have a value
       			  between 1 and 2**TC_BITS - 1.

        PROVIDER_OFFSET   The offset in bits from the least-significant
			  end of the mark where the provider mark field
       			  begins. If zero, the provider mark occupies
       			  the same area as the traffic shaping
       			  mark. Otherwise, the value specified must
       			  be greater than or equal to MASK_BITS
       			  (below). Shorewall will automatically adjust
       			  a non-zero PROVIDER_OFFSET to meet this
       			  requirement.

	PROVIDER_BITS	  Number of bits reserved for routing
			  marks. Provider marks must have a value
			  between 2**PROVIDER_OFFSET and
			  2**(PROVIDER_OFFSET + PROVIDER_BITS) - 1.

	MASK_BITS	  Number of 1 bits in the default mask when
			  specifying a test on the packet or connection
			  mark. These tests appear in the TEST column
			  of shorewall-tcrules (5) and in the MARK